# cpp-training

./: CMakeLists.txt  a.out  coding_guidelines  commands.txt  division.cpp  main.cpp
data/: data.csv  data.json  data.xml
dataset/: data.csv  data.json  data.xml
inc/: account.h  accountHolder.h  add.h  admin.h  authentication.h  bank.h  csvParser.h  currentAccount.h  division.h  enums.h  jsonParser.h  matrix.h  matrixFunction.h  matrixOperation.h  matrixOperations.h  matrix_operations.h  multiply.h  musicPlayer.h  parser.h  playlist.h  savingAccount.h  song.h  subtract.h  transactions.h  ui.h  userInfo.h  userManager.h  users.h  utility.h  utils.h  xmlParser.h
inc/UI/: accountHolderMenu.h  adminMenu.h  userMenu.h
mock/: mockAccount.h  mockMusicPlayer.h  mockUser.h  mockUserManager.h
src/: account.cpp  accountHolder.cpp  add.cpp  addMatrix.cpp  admin.cpp  authentication.cpp  bank.cpp  csvParser.cpp  currentAccount.cpp  explicit_main.cpp  implicit_main.cpp  jsonParser.cpp  main.cpp  matrix.cpp  matrixFunction.cpp  matrixOperation.cpp  matrixOperations.cpp  matrix_operations.cpp  multiplyMatrix.cpp  musicPlayer.cpp  playlist.cpp  savingAccount.cpp  song.cpp  subtract.cpp  transaction.cpp  userManager.cpp  users.cpp  utility.cpp  utils.cpp  xmlParser.cpp
src/UI/: accountHolderMenu.cpp  adminMenu.cpp  ui.cpp  userMenu.cpp
test/: accountHolderTest.cpp  accountTest.cpp  authenticationTest.cpp  bankTest.cpp  mockAccount.h  mockUserManager.h  mockUserTest.h  transactionTest.cpp  userManagerTest.cpp
tests/: accountHolderTest.cpp  accountTest.cpp  adminTest.cpp  authenticationTest.cpp  bankTest.cpp  musicAudioTest.cpp  musicPlayerTest.cpp  playlistTest.cpp  songTest.cpp  transactionTest.cpp  userManagerTest.cpp
week1/: atof_assignment.cpp  pattern_assignment.cpp
week1/07-07-2025/: data_type.cpp  data_type_size.cpp  palindrome.cpp  prime_number.cpp
week1/08-07-2025/: enum.cpp  floatVsDouble.cpp  floyd.cpp  passByValue.cpp  pyramid.cpp  simple_calculator.cpp  structure.cpp  swapNumber.cpp
week1/09-07-2025/: factorial.cpp  fibonacci.cpp  functionOverloading.cpp  gcd.cpp  inlineFunction.cpp  primeNumberRange.cpp  union.cpp
week1/10-07-2025/: array.cpp  binarySearch.cpp  majorityElement.cpp  practice.cpp  reverseArray.cpp  sortArray.cpp  threeSum.cpp  unionApplication.cpp  vector.cpp
week1/11-07-2025/: capitalizeFirstCharacter.cpp  largestWord.cpp  reverseString.cpp  stringConcatenation.cpp  strings.cpp  structure.cpp
week2/14-07-2025/: addNumber.cpp  enumExample.cpp  helloWorld.i  helloWorld.s  macro.cpp  namespace.cpp
week2/15-07-2025/: alphabets.h  letters.h  main.cpp  practice  practice.h  practiceImplementation.cpp  practiceProblem.cpp  structure.cpp
week2/16-07-2025/: add.h  addProgram.cpp  macro.cpp
week2/17-07-2025/: add.cpp  add.h  enum.cpp  main_explicit.cpp  main_implicit.cpp
week2/18-07-2025/: main.cpp  mathlib.cpp  mathlib.h
week3/21-07-2025/: modifyAddress.cpp  modifyPointer.cpp  pointer.cpp  pointerSize.cpp  pointerToArray.cpp  pointerToFunction.cpp  pointerVsReference.cpp  practice.cpp  reference.cpp  typesOfPointers.cpp  voidPointer.cpp
week3/22-07-2025/: lValue.cpp  (+9 more)
week7/20-08-2025/bank_test/: CMakeLists.txt
week7/20-08-2025/bank_test/inc/: accountHolder.h  bank.h
week7/20-08-2025/bank_test/src/: accountHolder.cpp  bank.cpp
week7/20-08-2025/bank_test/test/: accountHolderTest.cpp  bankTest.cpp
week7/21-08-2025/atm_machine/: CMakeLists.txt  atmMachine.cpp  test.cpp
week7/21-08-2025/atm_machine/inc/: atmMachine.h  bankServer.h  mockBankServer.h
week7/21-08-2025/payment_gateway/: CMakeLists.txt
week7/21-08-2025/payment_gateway/inc/: IEmailService.h  IUserInterface.h  userService.h
week7/21-08-2025/payment_gateway/src/: userService.cpp
week7/21-08-2025/payment_gateway/tests/: emailMock.h  userMock.h  userServiceTest.cpp
(+152 files in other folders)
